--- a/.env.example
+++ b/.env.example
@@ -6,5 +6,5 @@ PORT = 5000
 
 SECRET = YOUR-SUPER-SECRET-CODE
 
-NODEMAILER_EMAIl = YOUR-NODEMAILER-EMAIL-ID
-NODEMAILER_PASSWORD = YOUR-NODEMAILER-APP-PASSWORD
+MAIL_ID = craniocode@gmail.com
+MAIL_PASSWORD = yhfwnhneyzkucera
