--- a/package.json
+++ b/package.json
@@ -54,8 +54,10 @@
   "lint-staged": {
     "*.ts": [
       "yarn lint",
-      "yarn prisma:format",
       "yarn prettier --write ."
+    ],
+    "*.prisma": [
+      "yarn prisma:format"
     ]
   },
   "nodemonConfig": {
