ADD: List of all mentors, branch typeguards, success with data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
       "@globals/*": ["./src/globals/*"],
       "@controllers/*": ["./src/controllers/*"],
       "@utils/*": ["./src/utils/*"],
-      "@middlewares/*": ["./src/middlewares/*"]
+      "@middlewares/*": ["./src/middlewares/*"],
+      "@typeguards/*": ["./src/globals/typeguards/*"]
     },
 
     /* Projects */
